--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,23 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 16px;
+}
+
+.first-line {
+  display: flex;
+  justify-content: space-between;
+}
+
+.first-line .left {
+  display: flex;
+  gap: 10px;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.text {
+  margin-left: 32px;
 }
 
 .icon {
